--- a/about.html
+++ b/about.html
@@ -5,20 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About – Xenia Botea</title>
-    <link rel="icon" type="image/png" href="imagini/cropped-fav.png" />
+
+    <!-- CSS Global -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- CSS specific About -->
     <link rel="stylesheet" href="about-style.css">
+
+    <!-- Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500&family=Montserrat:wght@300;400&display=swap"
         rel="stylesheet">
+
+    <link rel="icon" type="image/png" href="imagini/cropped-fav.png" />
 </head>
 
 <body>
 
+    <!-- ================= HEADER ================= -->
+    <section id="header">
+        <div class="header container">
+            <div class="nav-bar">
+                <div class="brand">
+                    <a href="index.html">
+                        <img src="imagini/logo.svg" alt="InspirArt Logo" class="logo" />
+                    </a>
+                </div>
+
+                <div class="nav-list">
+                    <div class="hamburger">
+                        <div class="bar"></div>
+                    </div>
+                    <ul>
+                        <li><a href="about.html">About me</a></li>
+                        <li><a href="collection.html">Collection</a></li>
+                        <li><a href="courses.html">Courses</a></li>
+                        <li><a href="workshops.html">Workshops</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ================= END HEADER ================= -->
+
+
+    <!-- ================= TOP BAR ================= -->
     <div class="top-bar">
         <span>Xenia Botea</span>
         <span>The artist</span>
     </div>
 
+
+    <!-- ================= ABOUT SECTION ================= -->
     <section class="about-section">
         <h1 class="big-title">ABOUT ME</h1>
 
@@ -37,6 +76,8 @@
         </div>
     </section>
 
+
+    <!-- ================= ART SECTION ================= -->
     <section class="art-section">
         <div class="art-left">
             <h2 class="big-subtitle">THE ART<br>THAT I DO</h2>
@@ -48,6 +89,8 @@
         </div>
     </section>
 
+
+    <!-- ================= CREDENTIALS ================= -->
     <section class="credentials">
         <h2 class="section-title">MY CREDENTIALS</h2>
 
@@ -63,11 +106,15 @@
         </div>
     </section>
 
+
+    <!-- ================= QUOTE ================= -->
     <section class="quote-section">
         <h2>Every piece of art I create holds a piece of me forever.</h2>
         <img src="imagini/quote-image.jpg" alt="Quote image">
     </section>
 
+
+    <!-- ================= RECENT PROJECT ================= -->
     <section class="recent">
         <h2 class="section-title">MY MOST RECENT PROJECT</h2>
 
@@ -84,6 +131,8 @@
         </div>
     </section>
 
+
+    <!-- ================= COLLABORATE ================= -->
     <section class="collaborate">
         <div class="collab-left">
             <p class="small-top">Xenia Botea</p>
@@ -98,6 +147,33 @@
             <img src="imagini/collab.jpg" alt="Collaborate image">
         </div>
     </section>
+
+
+    <!-- ================= FOOTER ================= -->
+    <section id="footer">
+        <div class="footer container">
+            <div class="brand">
+                <h1><span>X</span>enia <span>B</span>otea</h1>
+            </div>
+
+            <div class="social-icons">
+                <a href="https://www.facebook.com/inspiraplus.ro/" target="_blank">
+                    <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook" />
+                </a>
+                <a href="https://www.instagram.com/inspiraplus.ro/" target="_blank">
+                    <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram" />
+                </a>
+                <a href="https://www.tiktok.com/@inspiraplus.ro" target="_blank">
+                    <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok" />
+                </a>
+            </div>
+
+            <p class="copyright">© 2026 | All rights reserved InspirA+</p>
+        </div>
+    </section>
+
+    <!-- JS -->
+    <script src="app.js"></script>
 
 </body>
 
